# awesome-deep-research

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  table.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  table_update.yml
.github/workflows/: quality.yml  update-stars.yml  update-table.yml
scripts/: update_readme.py  update_stars.py
tests/: test_update_readme.py  test_update_stars.py
